<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calc_keyboard"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:background="#ffffff"
    android:paddingBottom="5dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <View
            android:id="@+id/top_line1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#EFF1F6"/>
        <ImageButton
            android:id="@+id/button_bracket_left"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_calc_keyboard_left_bracket_selector"
            android:background="@null" />
        <TextView
            style="@style/RobotoMonoText"
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_background"
            android:text="1" />
        <TextView
            style="@style/RobotoMonoText"
            android:id="@+id/button_4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_background"
            android:text="4" />
        <TextView
            style="@style/RobotoMonoText"
            android:id="@+id/button_7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_background"
            android:text="7" />
        <TextView
            style="@style/RobotoMonoText"
            android:id="@+id/button_point"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_background"
            android:text="." />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <View
            android:id="@+id/top_line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#EFF1F6"/>
        <ImageButton
            android:id="@+id/button_bracket_right"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_calc_keyboard_right_bracket_selector"
            android:background="@null" />
        <TextView
            style="@style/RobotoMonoText"
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_background"
            android:text="2" />
        <TextView
            style="@style/RobotoMonoText"
            android:id="@+id/button_5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_background"
            android:text="5" />
        <TextView
            style="@style/RobotoMonoText"
            android:id="@+id/button_8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_background"
            android:text="8" />
        <TextView
            style="@style/RobotoMonoText"
            android:id="@+id/button_0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_background"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <View
            android:id="@+id/top_line3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#EFF1F6"/>
        <ImageButton
            android:id="@+id/button_divide"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_calc_keyboard_divide_selector"
            android:background="@null"/>
        <TextView
            style="@style/RobotoMonoText"
            android:id="@+id/button_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_background"
            android:text="3" />
        <TextView
            style="@style/RobotoMonoText"
            android:id="@+id/button_6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_background"
            android:text="6" />
        <TextView
            style="@style/RobotoMonoText"
            android:id="@+id/button_9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_background"
            android:text="9" />
        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_calc_keyboard_delete_selector"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <View
            android:id="@+id/top_line4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#EFF1F6"/>
        <ImageButton
            android:id="@+id/button_multiply"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_calc_keyboard_multiply_selector"
            android:background="@null" />
        <ImageButton
            android:id="@+id/button_minus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_calc_keyboard_minus_selector"
            android:background="@null" />
        <ImageButton
            android:id="@+id/button_plus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@drawable/ic_calc_keyboard_plus_selector"
            android:background="@null"/>
        <ImageButton
            android:id="@+id/button_enter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_calc_keyboard_enter_selector"
            android:background="@null"/>
        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_calc_keyboard_next_selector"
            android:background="@null"
            tools:visibility="gone"/>
    </LinearLayout>
</LinearLayout>
